--- a/MyLab.csproj
+++ b/MyLab.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baza.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Baza.Designer.cs">
+      <DependentUpon>Baza.cs</DependentUpon>
+    </Compile>
     <Compile Include="BroneCar.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="FormZenit.cs">
@@ -56,11 +62,15 @@
       <DependentUpon>FormZenit.cs</DependentUpon>
     </Compile>
     <Compile Include="ITransport.cs" />
+    <Compile Include="Parking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VeBron.cs" />
     <Compile Include="VeZenit.cs" />
     <Compile Include="Zenit.cs" />
+    <EmbeddedResource Include="Baza.resx">
+      <DependentUpon>Baza.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormZenit.resx">
       <DependentUpon>FormZenit.cs</DependentUpon>
     </EmbeddedResource>
