--- a/MyLab.csproj
+++ b/MyLab.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="BroneCar.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="FormCarConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCarConfig.Designer.cs">
+      <DependentUpon>FormCarConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormZenit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,11 +72,14 @@
     <Compile Include="ParkingCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VeBron.cs" />
-    <Compile Include="VeZenit.cs" />
+    <Compile Include="abstrBron.cs" />
+    <Compile Include="BroneZenit.cs" />
     <Compile Include="Zenit.cs" />
     <EmbeddedResource Include="Baza.resx">
       <DependentUpon>Baza.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCarConfig.resx">
+      <DependentUpon>FormCarConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormZenit.resx">
       <DependentUpon>FormZenit.cs</DependentUpon>
