--- a/MyLab.csproj
+++ b/MyLab.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>Baza.cs</DependentUpon>
     </Compile>
     <Compile Include="BroneCar.cs" />
+    <Compile Include="BroneComparer.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="FormCarConfig.cs">
       <SubType>Form</SubType>
@@ -78,6 +79,7 @@
     </Compile>
     <Compile Include="ITransport.cs" />
     <Compile Include="Parking.cs" />
+    <Compile Include="ParkingAlreadyHaveException.cs" />
     <Compile Include="ParkingCollection.cs" />
     <Compile Include="ParkingNotFoundException.cs" />
     <Compile Include="ParkingOccupiedPlaceException.cs" />
